added another endpoint; Tests still to be done